<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">탁구왕 김탁구</string>
    <string name="action_about">About</string>
    <string name="action_export">Export</string>

    <string name="devices">Devices</string>
    <string name="device_name_1">Device 1</string>
    <string name="device_name_2">Device 2</string>

    <string name="about_development_content"><![CDATA[
<p><b>Development</b> <a href="http://stuermer-benjamin.de/">Benjamin Stürmer</a></p>
<p><b>Development</b> <a href="https://plus.google.com/u/0/+SebastianKaspari/posts">Sebastian Kaspari</a></p>
<p><b>Development</b> <a href="https://plus.google.com/u/0/+JuhaniLehtimäki">Juhani Lehtimäki</a></p>
]]></string>

    <string name="about_open_source_content"><![CDATA[
<p><b>Square Otto</b> <a href="http://square.github.io/otto/">http://square.github.io/otto/</a></p>
]]></string>


    <string name="about_github_content"><![CDATA[
<p><b>Download source from</b><br/><a href="https://github.com/pocmo/SensorDashboard">https://github.com/pocmo/SensorDashboard</a></p>
<p>Distributed under Apache 2 License</p>
]]></string>

    <string name="one_step">1단계 : 김탁구를 넘보는 당신!\n누군지 궁금합니다</string>
    <string name="three_step">스마트 워치에서 \'시작\'을 누르고\n스윙해주세요!</string>
    <string name="three_step_first">첫 번째 스윙 슈욱~</string>
    <string name="three_step_second">두 번째 스윙 휘웅~</string>
    <string name="three_step_third">세 번째 스윙 호잇~</string>
    <string name="three_step_fourth">네 번째 스윙 쇼쇽~</string>
    <string name="three_step_fifth">다섯 번째 스윙 아뵤뵷!</string>

    <string-array name="userAbilityLevel">
        <item>상</item>
        <item>중</item>
        <item>하</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">나</string>
    <string name="label_peers">다른 플레이어</string>


</resources>
